# PlotExtract

./: .gitignore  CMakeLists.txt  PlotExtract.pro  README.md  WindowsDependencies.txt  app_figs.qrc  clickablepixmap.cpp  clickablepixmap.h  credits.cpp  credits.h  credits.ui  gen-classes  main.cpp  myviewer.cpp  plotextract.cpp  plotextract.h  plotextract.ui
app_figs/: plotextract.icns
